@@ -2,32 +2,58 @@ package com.ll.nbe344team7.domain.post.service;
 
 import com.ll.nbe344team7.domain.auction.entity.Auction;
 import com.ll.nbe344team7.domain.auction.repository.AuctionRepository;
+import com.ll.nbe344team7.domain.member.entity.Member;
+import com.ll.nbe344team7.domain.member.repository.MemberRepository;
 import com.ll.nbe344team7.domain.post.dto.request.AuctionRequest;
 import com.ll.nbe344team7.domain.post.dto.request.PostRequest;
 import com.ll.nbe344team7.domain.post.dto.request.PostSearchRequest;
 import com.ll.nbe344team7.domain.post.dto.response.PostDto;
 import com.ll.nbe344team7.domain.post.dto.response.PostListDto;
 import com.ll.nbe344team7.domain.post.entity.Post;
+import com.ll.nbe344team7.domain.post.entity.PostLike;
 import com.ll.nbe344team7.domain.post.exception.PostErrorCode;
 import com.ll.nbe344team7.domain.post.exception.PostException;
-
+import com.ll.nbe344team7.domain.post.repository.PostLikeRepository;
 import com.ll.nbe344team7.domain.post.repository.PostRepository;
+import com.ll.nbe344team7.global.exception.GlobalException;
+import com.ll.nbe344team7.global.exception.GlobalExceptionCode;
+import com.ll.nbe344team7.global.imageFIle.entity.ImageFile;
+import com.ll.nbe344team7.global.imageFIle.repository.ImageFileRepository;
+import com.ll.nbe344team7.global.imageFIle.service.S3ImageService;
 import jakarta.transaction.Transactional;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
+import org.springframework.web.multipart.MultipartFile;
 
+import java.util.Arrays;
+import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
 
 @Service
 public class PostService {
 
     private final PostRepository postRepository;
     private final AuctionRepository auctionRepository;
+    private final MemberRepository memberRepository;
+    private final PostLikeRepository postLikeRepository;
+    private final S3ImageService s3ImageService;
+    private final ImageFileRepository imageFileRepository;
 
-    public PostService(PostRepository postRepository, AuctionRepository auctionRepository) {
+    public PostService(PostRepository postRepository,
+                       AuctionRepository auctionRepository,
+                       MemberRepository memberRepository,
+                       PostLikeRepository postLikeRepository,
+                       S3ImageService s3ImageService,
+                       ImageFileRepository imageFileRepository
+    ) {
         this.postRepository = postRepository;
         this.auctionRepository = auctionRepository;
+        this.memberRepository = memberRepository;
+        this.postLikeRepository = postLikeRepository;
+        this.s3ImageService = s3ImageService;
+        this.imageFileRepository = imageFileRepository;
     }
 
     /**
@@ -40,36 +66,51 @@ public class PostService {
      * @since 2025-03-26
      */
     private void validatePostRequest(PostRequest request) {
-        if (request.getTitle().trim().isEmpty() || request.getTitle().length() > 50) {
+        if (request.getTitle().isBlank() || request.getTitle().length() > 50) {
             throw new PostException(PostErrorCode.INVALID_TITLE);
         }
-        if (request.getContent().trim().isEmpty() || request.getContent().length() > 500) {
+
+        if (request.getContent().isBlank() || request.getContent().length() > 500) {
             throw new PostException(PostErrorCode.INVALID_CONTENT);
         }
+
         if (request.getPrice() < 0) {
             throw new PostException(PostErrorCode.INVALID_PRICE);
+        }
+
+        if (request.getPlace().isBlank()) {
+            throw new PostException(PostErrorCode.INVALID_PLACE);
+        }
+    }
+
+    private void validateAuctionRequest(AuctionRequest auctionRequest) {
+        if (auctionRequest.getStartedAt().isAfter(auctionRequest.getClosedAt())) {
+            throw new PostException(PostErrorCode.INVALID_AUCTION_DATE);
         }
     }
 
 
     /**
      *
-     * 게시글 작성
+     * 게시글 작성 - 이미지 파일 O
      *
      * @param request
+     * @param images
      * @param memberId
      * @return
      *
      * @author GAEUN220
-     * @since 2025-03-25
+     * @since 2025-04-01
      */
     @Transactional
-    public Map<String, String> createPost(PostRequest request, Long memberId) {
+    public Map<String, String> createPost(PostRequest request, MultipartFile[] images, Long memberId) {
+
+        Member member = memberRepository.findById(memberId).orElseThrow(() -> new GlobalException(GlobalExceptionCode.NOT_FOUND_MEMBER));
 
         validatePostRequest(request);
 
         Post post = new Post(
-                memberId,
+                member,
                 request.getTitle(),
                 request.getContent(),
                 request.getPrice(),
@@ -77,11 +118,76 @@ public class PostService {
                 request.getAuctionStatus()
         );
 
-        post = postRepository.save(post);
+        final Post savedPost = postRepository.save(post);
+
+
+        // 이미지 업로드
+        if (images != null && images.length > 0) {
+            List<ImageFile> imageFiles = Arrays.stream(images)
+                    .map(image -> {
+                        String imageUrl = s3ImageService.upload(image); // S3 업로드
+                        ImageFile imageFile = new ImageFile(imageUrl);
+                        imageFile.setPost(savedPost); // Post와 연관 설정
+                        return imageFile;
+                    })
+                    .collect(Collectors.toList());
+
+            imageFileRepository.saveAll(imageFiles);
+            post.getImages().addAll(imageFiles);
+        }
 
         // 경매 상태가 true, AuctionRequest가 null이 아닐 경우
         if (request.getAuctionStatus() && request.getAuctionRequest() != null) {
             AuctionRequest auctionRequest = request.getAuctionRequest();
+
+            validateAuctionRequest(auctionRequest);
+
+            Auction auction = post.createAuction(
+                    auctionRequest.getStartedAt(),
+                    auctionRequest.getClosedAt()
+            );
+
+            auctionRepository.save(auction);
+        }
+
+        // 반환 메시지
+        return Map.of("message", post.getId() + "번 게시글이 작성되었습니다.");
+    }
+
+    /**
+     *
+     * 게시글 작성 - 이미지 파일 X (테스트 코드용)
+     *
+     * @param request
+     * @param memberId
+     * @return
+     *
+     * @author GAEUN220
+     * @since 2025-04-01
+     */
+    @Transactional
+    public Map<String, String> createPost(PostRequest request, Long memberId) {
+
+        Member member = memberRepository.findById(memberId).orElseThrow(() -> new GlobalException(GlobalExceptionCode.NOT_FOUND_MEMBER));
+
+        validatePostRequest(request);
+
+        Post post = new Post(
+                member,
+                request.getTitle(),
+                request.getContent(),
+                request.getPrice(),
+                request.getPlace(),
+                request.getAuctionStatus()
+        );
+
+        postRepository.save(post);
+
+        // 경매 상태가 true, AuctionRequest가 null이 아닐 경우
+        if (request.getAuctionStatus() && request.getAuctionRequest() != null) {
+            AuctionRequest auctionRequest = request.getAuctionRequest();
+
+            validateAuctionRequest(auctionRequest);
 
             Auction auction = post.createAuction(
                     auctionRequest.getStartedAt(),
@@ -110,7 +216,7 @@ public class PostService {
 
         Post post = postRepository.findById(postId).orElseThrow(() -> new PostException(PostErrorCode.POST_NOT_FOUND));
 
-        if (post.getMemberId() != memberId) {
+        if (!post.getMember().getId().equals(memberId)) {
             throw new PostException(PostErrorCode.UNAUTHORIZED_ACCESS);
         }
 
@@ -121,24 +227,81 @@ public class PostService {
 
     /**
      *
-     * 게시글 수정
+     * 게시글 수정 - 이미지 O
      *
      * @param postId
      * @param request
+     * @param images
      * @param memberId
-     * @return
      *
      * @author GAEUN220
-     * @since 2025-03-25
+     * @since 2025-04-01
      */
     @Transactional
-    public Map<String, String> modifyPost(Long postId, PostRequest request, Long memberId) {
+    public void modifyPost(Long postId, PostRequest request, MultipartFile[] images, Long memberId) {
 
         validatePostRequest(request);
 
         Post post = postRepository.findById(postId).orElseThrow(() -> new PostException(PostErrorCode.POST_NOT_FOUND));
 
-        if (post.getMemberId() != memberId) {
+        if (!post.getMember().getId().equals(memberId)) {
+            throw new PostException(PostErrorCode.UNAUTHORIZED_ACCESS);
+        }
+
+        post.update(
+                request.getTitle(),
+                request.getContent(),
+                request.getPrice(),
+                request.getPlace(),
+                request.getSaleStatus(),
+                request.getAuctionStatus()
+        );
+
+        if (images != null && images.length > 0) {
+            // 기존 이미지 삭제 (S3 + DB)
+            List<ImageFile> existingImages = post.getImages();
+            existingImages.forEach(image -> {
+                s3ImageService.deleteImageFromS3(image.getUrl());
+                imageFileRepository.delete(image);
+            });
+            post.getImages().clear();
+
+            // 새 이미지 업로드
+            List<ImageFile> newImages = Arrays.stream(images)
+                    .map(image -> {
+                        String imageUrl = s3ImageService.upload(image); // S3 업로드
+                        ImageFile imageFile = new ImageFile(imageUrl);
+                        imageFile.setPost(post); // 게시글과 연관 설정
+                        return imageFile;
+                    })
+                    .collect(Collectors.toList());
+
+            imageFileRepository.saveAll(newImages);
+            post.getImages().addAll(newImages);
+        }
+
+        postRepository.save(post);
+    }
+
+    /**
+     *
+     * 게시글 수정 - 이미지 X (테스트 코드 용)
+     *
+     * @param postId
+     * @param request
+     * @param memberId
+     *
+     * @author GAEUN220
+     * @since 2025-04-01
+     */
+    @Transactional
+    public void modifyPost(Long postId, PostRequest request, Long memberId) {
+
+        validatePostRequest(request);
+
+        Post post = postRepository.findById(postId).orElseThrow(() -> new PostException(PostErrorCode.POST_NOT_FOUND));
+
+        if (!post.getMember().getId().equals(memberId)) {
             throw new PostException(PostErrorCode.UNAUTHORIZED_ACCESS);
         }
 
@@ -152,8 +315,6 @@ public class PostService {
         );
 
         postRepository.save(post);
-
-        return Map.of("message", postId + "번 게시글이 수정되었습니다.");
     }
 
     /**
@@ -194,8 +355,9 @@ public class PostService {
                 searchRequest.getMaxPrice(),
                 searchRequest.getSaleStatus(),
                 searchRequest.getKeyword(),
+                searchRequest.getPlace(),
                 pageable
-        ).map(post -> PostListDto.Companion.from(post));  // 코틀린의 from() 메서드 호출
+        ).map(post -> PostListDto.Companion.from(post));
     }
 
     /**
@@ -214,7 +376,9 @@ public class PostService {
         Post post = postRepository.findById(postId)
                 .orElseThrow(() -> new PostException(PostErrorCode.POST_NOT_FOUND));
 
-        return PostDto.Companion.from(post, memberId);
+        boolean isLiked = postLikeRepository.existsByPostIdAndMemberId(postId, memberId);
+
+        return PostDto.Companion.from(post, memberId, isLiked);
     }
 
 
@@ -229,28 +393,81 @@ public class PostService {
      * @author GAEUN220
      * @since 2025-03-26
      */
-    public Map<String, String> changeToAuction(Long postId, AuctionRequest auctionRequest, Long memberId) {
+    public void changeToAuction(Long postId, AuctionRequest auctionRequest, Long memberId) {
 
         Post post = postRepository.findById(postId).orElseThrow(() -> new PostException(PostErrorCode.POST_NOT_FOUND));
 
-        if (post.getMemberId() != memberId) {
+        if (!post.getMember().getId().equals(memberId)) {
             throw new PostException(PostErrorCode.UNAUTHORIZED_ACCESS);
         }
 
         if (post.getAuctionDetails() != null) {
-            throw new PostException(PostErrorCode.ALREADY_IN_AUCTION);
+            Auction existingAuction = post.getAuctionDetails();
+
+            validateAuctionRequest(auctionRequest);
+
+            existingAuction.updateAuction(auctionRequest.getStartedAt(), auctionRequest.getClosedAt());
+
+            auctionRepository.save(existingAuction);
+        } else if (post.getAuctionDetails() == null) {
+            post.updateAuctionStatus(true);
+
+            validateAuctionRequest(auctionRequest);
+
+            Auction auction = post.createAuction(
+                    auctionRequest.getStartedAt(),
+                    auctionRequest.getClosedAt()
+            );
+
+            postRepository.save(post);
+            auctionRepository.save(auction);
         }
+    }
 
-        post.updateAuctionStatus(true);
+    /**
+     *
+     * 게시글 좋아요
+     *
+     * @param postId
+     * @param memberId
+     * @return
+     *
+     * @author GAEUN220
+     * @since 2025-03-31
+     */
+    public Map<String, String> likePost(Long postId, Long memberId) {
+        Post post = postRepository.findByIdWithLock(postId).orElseThrow(() -> new PostException(PostErrorCode.POST_NOT_FOUND));
+        Member member = memberRepository.findById(memberId).orElseThrow(() -> new GlobalException(GlobalExceptionCode.NOT_FOUND_MEMBER));
 
-        Auction auction = post.createAuction(
-                auctionRequest.getStartedAt(),
-                auctionRequest.getClosedAt()
-        );
+        PostLike postLike = new PostLike(member, post);
+        postLikeRepository.save(postLike);
 
-        auctionRepository.save(auction);
+        post.like();
         postRepository.save(post);
 
-        return Map.of("message", "경매 전환이 완료되었습니다.");
+        return Map.of("message", postId + "번 게시글 좋아요 성공");
+    }
+
+    /**
+     *
+     * 게시글 좋아요 취소
+     *
+     * @param postId
+     * @param memberId
+     * @return
+     *
+     * @since 2025-03-31
+     */
+    public Map<String, String> unlikePost(Long postId, Long memberId) {
+        Post post = postRepository.findByIdWithLock(postId).orElseThrow(() -> new PostException(PostErrorCode.POST_NOT_FOUND));
+        Member member = memberRepository.findById(memberId).orElseThrow(() -> new GlobalException(GlobalExceptionCode.NOT_FOUND_MEMBER));
+
+        PostLike postLike = postLikeRepository.findByMemberAndPost(member, post).orElseThrow(() -> new PostException(PostErrorCode.POST_LIKE_NOT_FOUND));
+        postLikeRepository.delete(postLike);
+
+        post.unlike();
+        postRepository.save(post);
+
+        return Map.of("message", postId + "번 게시글 좋아요 취소 성공");
     }
 }
